[gd_scene load_steps=12 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://sfx/music.ogg" type="AudioStream" id=2]
[ext_resource path="res://gfx/logo.png" type="Texture" id=3]
[ext_resource path="res://gfx/fireflies.tres" type="Shader" id=4]
[ext_resource path="res://gfx/white.png" type="Texture" id=5]
[ext_resource path="res://theme.tres" type="Theme" id=6]
[ext_resource path="res://gfx/credits.png" type="Texture" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/radius = 0.01
shader_param/sphere_Counts = 160.0
shader_param/scale = Vector2( 0.7, 0.7 )
shader_param/offset = Vector2( 0, 0 )
shader_param/speed = 0.1
shader_param/gamma = 0.716
shader_param/falloff = 4.957
shader_param/color = Color( 0.843137, 0.0392157, 0.517647, 1 )
shader_param/color_varyance = 2.0
shader_param/sinx = true
shader_param/siny = true
shader_param/seed = 1
shader_param/cut_alpha = 0.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.375, 0.38, 0.62, 0.625 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 0.882353, 0, 0, 0, 0.882353, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 3 )
width = 480

[sub_resource type="StyleBoxEmpty" id=4]

[node name="game" type="Node2D"]
script = ExtResource( 1 )

[node name="menu" type="Node2D" parent="."]
light_mask = 0

[node name="sprites" type="ColorRect" parent="menu"]
margin_right = 480.0
margin_bottom = 320.0
color = Color( 0, 0, 0, 1 )

[node name="sprites" type="Sprite" parent="menu/sprites"]
material = SubResource( 1 )
texture = ExtResource( 5 )
centered = false

[node name="color_rect" type="TextureRect" parent="menu"]
light_mask = 0
margin_right = 480.0
margin_bottom = 320.0
texture = SubResource( 2 )
expand = true

[node name="center_container" type="CenterContainer" parent="menu"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 320.0
theme = ExtResource( 6 )

[node name="v_box_container" type="VBoxContainer" parent="menu/center_container"]
light_mask = 0
margin_left = 112.0
margin_top = 81.0
margin_right = 368.0
margin_bottom = 239.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="texture_rect" type="TextureRect" parent="menu/center_container/v_box_container"]
light_mask = 0
margin_right = 256.0
margin_bottom = 128.0
texture = ExtResource( 3 )

[node name="v_box_container" type="VBoxContainer" parent="menu/center_container/v_box_container"]
light_mask = 0
margin_left = 74.0
margin_top = 132.0
margin_right = 181.0
margin_bottom = 158.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="new_game_button" type="Button" parent="menu/center_container/v_box_container/v_box_container"]
light_mask = 0
margin_right = 107.0
margin_bottom = 26.0
shortcut_in_tooltip = false
text = "New Game"

[node name="quit_button" type="Button" parent="menu/center_container/v_box_container/v_box_container"]
visible = false
light_mask = 0
margin_top = 30.0
margin_right = 107.0
margin_bottom = 56.0
shortcut_in_tooltip = false
text = "Quit"

[node name="credits" type="Sprite" parent="menu"]
position = Vector2( 0, 320 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( -6, -52 )

[node name="v_box_container" type="VBoxContainer" parent="menu"]
anchor_bottom = 1.0
margin_right = 180.0
rect_min_size = Vector2( 0, 320 )
size_flags_vertical = 3
custom_constants/separation = 2
alignment = 2

[node name="viv" type="Button" parent="menu/v_box_container"]
margin_top = 276.0
margin_right = 180.0
margin_bottom = 297.0
rect_min_size = Vector2( 180, 21 )
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )

[node name="may" type="Button" parent="menu/v_box_container"]
margin_top = 299.0
margin_right = 180.0
margin_bottom = 320.0
rect_min_size = Vector2( 180, 21 )
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -4.0
autoplay = true
bus = "music"

[connection signal="pressed" from="menu/center_container/v_box_container/v_box_container/new_game_button" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="menu/center_container/v_box_container/v_box_container/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="menu/v_box_container/viv" to="." method="_on_viv_pressed"]
[connection signal="pressed" from="menu/v_box_container/may" to="." method="_on_may_pressed"]
